--- a/SitesToClassroomNotUWP/App.xaml
+++ b/SitesToClassroomNotUWP/App.xaml
@@ -1,9 +1,11 @@
-﻿<Application x:Class="SitesToClassroomNotUWP.App"
+﻿<Application x:Class="SitesToClassroom.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SitesToClassroomNotUWP"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:SitesToClassroom"
+             StartupUri="MainWindow.xaml"
+             Startup="App_Startup" 
+             Exit="App_Exit">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
