--- a/SitesToClassroomNotUWP/MainWindow.xaml
+++ b/SitesToClassroomNotUWP/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SitesToClassroom"
         mc:Ignorable="d"
-        Title="Assignments from Sites to Classroom" Height="450" Width="800">
+        Title="Assignments from Sites to Classroom" Height="450" Width="800" Closing="Window_Closing">
 
     <Grid Margin="10">
 
@@ -17,15 +17,18 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition Height="100"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <TextBlock Margin="10,0,0,0" VerticalAlignment="Center">Site URL:</TextBlock>
-                <TextBox x:Name="SiteURL" Height="24" Margin="10,0,0,0" Grid.Column="1"></TextBox>
-                <Button x:Name="FetchSite" Width="120" Grid.Column="2" HorizontalAlignment="Center" Height="32" Click="FetchSite_Click">GO!</Button>
-            <TextBlock x:Name="Wait" Grid.Row="1" Grid.Column="1" FontSize="28" TextAlignment="Center" TextWrapping="Wrap" Visibility="Hidden">Please Wait...</TextBlock>
-            <TextBlock x:Name="Status" Grid.Row="1" Grid.Column="1" FontSize="28" TextAlignment="Center" TextWrapping="Wrap" Visibility="Hidden"></TextBlock>
-                <Button x:Name="Next" Width="120" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" Height="32" Click="Next_Click" Visibility="Hidden" >Next</Button>
+            <TextBox x:Name="SiteURL" Height="24" Margin="10,0,0,0" Grid.Column="1"></TextBox>
+            <Button x:Name="FetchSite" Width="120" Grid.Column="2" HorizontalAlignment="Center" Height="32" Click="FetchSite_Click">GO!</Button>
+            <TextBlock Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" Margin="0,10,10,0">Starting publication date (or blank for all)</TextBlock>
+            <TextBox x:Name="PubDateText" Grid.Column="2" Grid.Row="1" Height="20"></TextBox>
+            <TextBlock x:Name="Wait" Grid.Row="2" Grid.Column="1" FontSize="28" TextAlignment="Center" TextWrapping="Wrap" Visibility="Hidden">Please Wait...</TextBlock>
+            <TextBlock x:Name="Status" Grid.Row="2" Grid.Column="1" FontSize="28" TextAlignment="Center" TextWrapping="Wrap" Visibility="Hidden"></TextBlock>
+            <Button x:Name="Next" Width="120" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Height="32" Click="Next_Click" Visibility="Hidden" >Next</Button>
 
         </Grid>
     </Grid>
